<resources>
    <string name="app_name">BankELdam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="API_KEY_MAP">AIzaSyBZprE0EDE4DjbL8GyShQJNflzWUhyoUJc</string>
    <string name="hello_blank_fragment">Hello blank fragment2</string>
    <string name="newAccount">انشاء حساب جديد</string>
    <string name="Login">دخول</string>
    <string name="ForgetPassword">هل نسيت كلمة المرور</string>
    <string name="RememberMe">تذكرني</string>
    <string name="Phone">الجوال</string>
    <string name="Password">كلمة المرور</string>
    <string name="Name">اسم</string>
    <string name="email">البريد الالكتروني</string>
    <string name="Birthday">تاريخ الميلاد</string>
    <string name="blood">فصيلة الدم</string>
    <string name="country">المحافظة</string>
    <string name="city">المدينة</string>
    <string name="LastDay">تاريخ اخر تبرع</string>
    <string name="returnPassword">تأكيد كلمة المرور</string>
    <string name="send">ارسال</string>
    <string name="comfirmationCode">كود التحقيق</string>
    <string name="confirmNewPass">تاكيد كلمة المرور الجديدة</string>
    <string name="newPass">كلمة المرور الجديدة</string>
    <string name="codePassChange">كود تغير كلمة السر</string>
    <string name="article">مقالات </string>
    <string name="bloodRequests">طلبات التبرع</string>
    <string name="name">الاسم</string>
    <string name="age">العمر</string>
    <string name="bloodType">فصيلة الدم</string>
    <string name="NumberOfBags">عدد اكياس</string>
    <string name="hospital">المستشفي</string>
    <string name="hospitalAdress">عنوان المستشفي</string>
    <string name="Details">التفاصيل</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hospitalName">اسم المستشفي</string>
    <string name="Notes">الملاحظات</string>
    <string name="sendRequest">ارسال طلب</string>
    <string name="notification">التنبيهات</string>
    <string name="title_activity_app_home">"بنك الدم</string>
    <string name="personInformation">معلوماتي</string>
    <string name="notificationSetting">اعدادات الاشعارات</string>
    <string name="favourite">المفضلة</string>
    <string name="contactUs">تواصل معنا</string>
    <string name="rating">تقيم علي المتجر</string>
    <string name="logout">خروج</string>
    <string name="edit">تعديل</string>
    <string name="save">حفظ</string>
    <string name="home">الرئيسية</string>
    <string name="tittleMassage">عنوان الرسالة</string>
    <string name="massageText">نص الرسالة</string>
    <string name="call">اتصال</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id">124</string>
</resources>
